fix: corrige overflow das publicações + header

--- a/src/GamingGroove/wwwroot/css/ComunidadePage.css
+++ b/src/GamingGroove/wwwroot/css/ComunidadePage.css
@@ -938,6 +938,7 @@ a {
     .post-container {
         justify-content: baseline;
         padding: 0;
+        overflow: visible;
     }
     .post {
         width: 99%;
