--- a/src/GamingGroove/wwwroot/css/_Layout.css
+++ b/src/GamingGroove/wwwroot/css/_Layout.css
@@ -538,6 +538,8 @@ header {
     }
     header {
         align-items: center;
+        height: 180px;
+        z-index: 2;
     }
     .menu-icon {
         height: 50px;
